--- a/public/style.css
+++ b/public/style.css
@@ -287,7 +287,7 @@ header {
 	margin: 0;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 860px) {
 	.intro {
 		display: grid;
 		width: min-content;
@@ -298,6 +298,15 @@ header {
 			'img subtitle';
 		grid-template-columns: min-content max-content;
 	}
+	.subtittle-intro {
+		align-self: start;
+		grid-column: -1/1;
+		grid-row: 2;
+		text-align: left;
+		position: relative;
+		left: -1.5rem;
+		width: calc(100% + 1rem);
+	}
 }
 
 .intro-img {
@@ -306,15 +315,15 @@ header {
 	position: relative;
 	z-index: 1.5;
 }
-.subtittle-intro {
+/* .subtittle-intro {
 	align-self: start;
 	grid-column: -1/1;
 	grid-row: 2;
 	text-align: left;
 	position: relative;
-	left: -1.5rem;
+	 left: -1.5rem;
 	width: calc(100% + 1rem);
-}
+} */
 .my-services {
 	background-color: var(--clr-dark);
 	color: var(--clr-light);
@@ -495,5 +504,21 @@ header {
 	.contact-box {
 		margin-left: 2rem;
 		width: 80%;
+	}
+}
+
+@media only screen and (max-width: 860px) {
+	.intro img {
+		width: 60%;
+		margin: 0 auto;
+	}
+	.subtittle-intro {
+		align-self: start;
+		grid-column: -1/1;
+		grid-row: 2;
+		text-align: left;
+		position: relative;
+
+		width: calc(100% + 1rem);
 	}
 }
