--- a/public/style.css
+++ b/public/style.css
@@ -430,6 +430,7 @@ header {
 	transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), apacity 250ms linear;
 	height: 200px;
 	width: 100%;
+	object-fit: cover;
 }
 .porfolio-item :focus {
 	position: relative;
